--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,5 +1,5 @@
 <div class='error'>
-    <h1>{{message}}</h1>
+    <h1>{{{message}}}</h1>
     <h2>{{error.status}}</h2>
-    <pre>{{error.stack}}</pre>
+    <pre>{{{error.stack}}}</pre>
 </div>
